Fix subhead spacing on cards to better align with heading

--- a/src/main/sass/elements/_card.scss
+++ b/src/main/sass/elements/_card.scss
@@ -37,6 +37,7 @@
 		@include font-title-small();
 		display: block;
 		margin: 0.5rem;
+		padding-left: 0.25rem;
 
 		&:empty {
 			display: none;
